# sdk

./: README.md
example_projects/C#/: README.md
example_projects/C#/Notimation/: Notimation.sln
example_projects/C#/Notimation/Notimation/: Program.cs
example_projects/C++/Linux/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  notimation  sms.cpp  sms.h
example_projects/C++/Visual Studio/Notimation/: Notimation.sln
example_projects/C++/Visual Studio/Notimation/Notimation/: Notimation.cpp  Notimation.vcxproj  Notimation.vcxproj.filters
example_projects/dll/Notimation/: Notimation.sln
example_projects/dll/Notimation/Notimation/: Notimation.cs  Notimation.csproj
example_projects/dll/Notimation/Notimation/Properties/: AssemblyInfo.cs  Notimation.rd.xml
example_projects/java/: Main.java  Message.java  MessageResponse.java  NotimationClient.java
example_projects/node/: README.md  index.js  package-lock.json  package.json
example_projects/python/notimation/: sms.py
snippets/Android/: README.md
snippets/C/: README.md
snippets/C#/: README.md
snippets/C++/: README.md
snippets/Flutter/: README.md
snippets/Java/: README.md
snippets/Javascript/: README.md
snippets/Nodejs/: README.md
snippets/Objective-C/: README.md
snippets/PHP/: README.md
snippets/Python/: README.md
snippets/Ruby/: README.md
snippets/Shell/: README.md
snippets/Swift/: README.md
snippets/cURL/: README.md
snippets/jQuery/: README.md
